--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>hii!! this is github testing </h1>
+        <p>this is a paragraph, made for adding changes</p>
     </body>
 </html>
