--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>hii!! this is github testing </h1>
         <p>this is a paragraph, made for adding changes</p>
+        <p>this is the second paragraph</p>
     </body>
 </html>
