--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>hii!! this is github testing </h1>
         <p>this is a paragraph, made for adding changes</p>
         <p>this is the second paragraph</p>
+        <p>this is the third paragraph</p>
     </body>
 </html>
